Setup firebase firestore & Implement Review Reservation Page

--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -17,4 +17,10 @@
     background: $dark-accent;
     color: $light-shades;
   }
+
+  &--text-only {
+    background: none;
+    border-color: transparent;
+    outline: inherit;
+  }
 }
