--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -14,6 +14,7 @@
 @import './components/button';
 @import './components/content';
 
+@import './pages/admin';
 @import './pages/home';
 @import './pages/login';
 @import './pages/menu';
