--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,6 +13,7 @@
 
 @import './components/button';
 @import './components/content';
+@import './components/loader';
 
 @import './pages/admin';
 @import './pages/home';
