Implement Modal for Review page

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,6 +8,7 @@
 
 @import './layout/container';
 @import './layout/home-featured-images';
+@import './layout/modal-backdrop';
 @import './layout/nav';
 @import './layout/wrapper';
 
